k8s/regression/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: regression
  namespace: dev
  labels:
    app: regression
spec:
  replicas: 1
  selector:
    matchLabels:
      app: regression
  template:
    metadata:
      labels:
        app: compare
    spec:
      containers:
      - name: compare
        image: ghcr.io/patricklarocque/regression:5f9195bcfd61adc78281f8458d9a10b89b660422
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
