k8s/regression/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: regression
  namespace: dev
spec:
  selector:
    app: regression
  ports:
  - port: 80
    targetPort: 80
