k8s/regression/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: regression
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: regression.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: regression
            port:
              number: 80
